test_programs/bad/8.concl
console_pack my_console_pack {
	console {
		storage: 1024 GB,
		display {
			diagonal: 30 inch,
			type: LED,
			resolution: Full-HD
		}
	},
	controller {
		colour: blue
	},
	controller {
		colour: black
	},
	controller {
		colour: yellow
	},
	controller {
		colour: red
	},
	controller {
		colour: silver
	},
	game {
		name: Hedwig the Hedgehog
	}
}